--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,11 @@ getopts = "0.2"
 rusqlite = "0.20"
 glob = "0.3.0"
 lazy_static = "1.4.0"
+serde = { version = "1.0.101", features = ["derive"] }
+serde_json = "1"
+reqwest = "0.9.22"
+sha1 = "*"
+sha2 = "*"
 
 [profile.release]
 debug = 1
