--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "factorio_rust"
+name = "factorio-benchmark-helper"
 version = "0.0.1"
 authors = ["mulark <mulark11@gmail.com>"]
 edition = "2018"
