--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "factorio-benchmark-helper"
-version = "0.0.1"
+version = "0.0.2"
 authors = ["mulark <mulark11@gmail.com>"]
 edition = "2018"
 
@@ -20,6 +20,7 @@ serde_json = "1"
 reqwest = "0.9.22"
 sha1 = "*"
 sha2 = "*"
+raw-cpuid = "*"
 
 [profile.release]
 debug = 1
