--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ directories = "2.0.2"
 rust-ini = "0.13"
 textwrap = "0.11"
 getopts = "0.2"
-rusqlite = "0.20"
+rusqlite = { version = "0.20", features = ["bundled"] }
 glob = "0.3.0"
 lazy_static = "1.4.0"
 serde = { version = "1.0.101", features = ["derive"] }
@@ -24,7 +24,6 @@ raw-cpuid = "*"
 clap = "*"
 nix = "*"
 bincode = "*"
-rust-lzma = "*"
 
 [profile.release]
 debug = 1
