--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "factorio-benchmark-helper"
-version = "0.1.3"
+version = "0.1.4"
 authors = ["mulark <mulark11@gmail.com>"]
 edition = "2018"
 
@@ -12,7 +12,7 @@ rusqlite = { version = "*", features = ["bundled"] }
 lazy_static = "*"
 serde = { version = "*", features = ["derive"] }
 serde_json = "*"
-reqwest = { version = "0.9.*"}
+reqwest = { version = "0.10", features = ["blocking", "json"]}
 sha1 = "*"
 sha2 = "*"
 raw-cpuid = "*"
