Dump reqwest for ureq

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,6 @@ rusqlite = { version = "*", features = ["bundled"] }
 lazy_static = "*"
 serde = { version = "*", features = ["derive"] }
 serde_json = "*"
-reqwest = { version = "0.10", features = ["blocking", "json"]}
 sha1 = "*"
 sha2 = "*"
 raw-cpuid = "*"
@@ -20,6 +19,7 @@ clap = "*"
 bincode = "*"
 percent-encoding = "2.*"
 assert_cmd = "*"
+ureq = {version = "1.2", features = ["json"]}
 
 [profile.release]
 debug = 1
